    `NimScript <docs/nims.html>`_.
  - The compiler finally considers symbol binding rules in templates and
    generics for overloaded ``[]``, ``[]=``, ``{}``, ``{}=`` operators
    (issue `#2599 <https://github.com/nim-lang/Nim/issues/2599>`_).
  - The compiler now supports a `bitsize pragma <docs/manual.html#pragmas-bitsize-pragma>`_
    for constructing bitfields.


  Language Additions
  ------------------

  - ``system.unsafeAddr`` can be used to access the address of a ``let``
    variable or parameter for C interoperability. Since technically this
    makes parameters and ``let`` variables mutable, it is considered even more
    unsafe than the ordinary ``addr`` builtin.
  - Added ``macros.getImpl`` that can be used to access the implementation of
    a routine or a constant. This allows for example for user-defined inlining
    of function calls.
  - Tuple unpacking finally works in a non-var/let context: ``(x, y) = f()``
    is allowed. Note that this doesn't declare ``x`` and ``y`` variables, for
    this ``let (x, y) = f()`` still needs to be used.
  - ``when nimvm`` can now be used for compiletime versions of some code
    sections. Click `here <docs/manual.html#when-nimvm-statement>`_ for details.
  - Usage of the type ``NimNode`` in a proc now implicitly annotates the proc
    with ``.compileTime``. This means generics work much better for ``NimNode``.


  Bugfixes
  --------
  - Fixed "Compiler internal error on iterator it(T: typedesc[Base]) called with it(Child), where Child = object of Base"
    (`#2662 <https://github.com/Araq/Nim/issues/2662>`_)
  - Fixed "repr() misses base object field in 2nd level derived object"
    (`#2749 <https://github.com/Araq/Nim/issues/2749>`_)
  - Fixed "nimsuggest doesn't work more than once on the non-main file"
    (`#2694 <https://github.com/Araq/Nim/issues/2694>`_)
  - Fixed "JS Codegen. Passing arguments by var in certain cases leads to invalid JS."
    (`#2798 <https://github.com/Araq/Nim/issues/2798>`_)